--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-23 12:54:48+0000 */
+/* Translation-Revision-Date: 2021-07-07 11:54:07+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: id */
@@ -298,13 +298,13 @@
 "< 1 hour" = "< 1 jam";
 
 /* A short description of how many times a week the user will receive a blogging reminder. The '%d' placeholder will be populated with a count of the number of times a week they'll be reminded, and should be surrounded by <strong> HTML tags. */
-"<strong>%d<\/strong> times a week" = "<strong>%d<\/strong> times a week";
+"<strong>%d<\/strong> times a week" = "<strong>%d<\/strong> kali seminggu";
 
 /* Short title telling the user they will receive a blogging reminder once per week. The word for 'once' should be surrounded by <strong> HTML tags. */
-"<strong>Once<\/strong> a week" = "<strong>Once<\/strong> a week";
+"<strong>Once<\/strong> a week" = "<strong>Satu kali<\/strong> seminggu";
 
 /* Short title telling the user they will receive a blogging reminder two times a week. The word for 'twice' should be surrounded by <strong> HTML tags. */
-"<strong>Twice<\/strong> a week" = "<strong>Twice<\/strong> a week";
+"<strong>Twice<\/strong> a week" = "<strong>Dua kali<\/strong> seminggu";
 
 /* Label displaying the user's username preceeded by an '@' symbol. %1$@ is a placeholder for the username. */
 "@%1$@" = "@%1$@";
@@ -649,7 +649,7 @@
 "Alt Text" = "Teks Alt";
 
 /* No comment provided by engineer. */
-"Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\"." = "Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\".";
+"Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\"." = "Selain itu, blok ini bisa dilepas lalu disunting secara terpisah dengan mengetuk \"Ubah ke blok reguler\".";
 
 /* String displayed before offering alternative login methods */
 "Alternatively:" = "Atau:";
@@ -1029,7 +1029,7 @@
 "Blog's Viewer" = "Pemirsa Blog";
 
 /* Label for the blogging reminders setting */
-"Blogging Reminders" = "Blogging Reminders";
+"Blogging Reminders" = "Pengingat Blogging";
 
 /* Accessibility label for bold button on formatting toolbar.
    Discoverability title for bold formatting keyboard shortcut. */
@@ -2410,10 +2410,10 @@
 "Edit your homepage" = "Sunting halaman beranda";
 
 /* No comment provided by engineer. */
-"Editing reusable blocks is not yet supported on WordPress for Android" = "Editing reusable blocks is not yet supported on WordPress for Android";
+"Editing reusable blocks is not yet supported on WordPress for Android" = "Menyunting blok pakai ulang belum didukung di WordPress untuk Android";
 
 /* No comment provided by engineer. */
-"Editing reusable blocks is not yet supported on WordPress for iOS" = "Editing reusable blocks is not yet supported on WordPress for iOS";
+"Editing reusable blocks is not yet supported on WordPress for iOS" = "Menyunting blok pakai ulang belum didukung di WordPress untuk iOS";
 
 /* Editing GIF alert message. */
 "Editing this GIF will remove its animation." = "Mengedit GIF ini akan menghapus animasinya.";
@@ -2647,7 +2647,7 @@
 "Event" = "Peristiwa";
 
 /* Short title telling the user they will receive a blogging reminder every day of the week. */
-"Every day" = "Every day";
+"Every day" = "Tiap hari";
 
 /* Label for the post author filter. This filter shows posts for all users on the blog. */
 "Everyone" = "Setiap Orang";
@@ -3029,7 +3029,7 @@
 "Go to Reader" = "Buka Pembaca";
 
 /* Instruction telling the user how to enable notifications in their device's system Settings app. The section names here should match those in Settings. */
-"Go to Settings → Notifications → WordPress, and toggle Allow Notifications." = "Go to Settings → Notifications → WordPress, and toggle Allow Notifications.";
+"Go to Settings → Notifications → WordPress, and toggle Allow Notifications." = "Buka Pengaturan &rarr; Pemberitahuan &rarr; WordPress, lalu pilih Izinkan Pemberitahuan.";
 
 /* Button label for going to settings to approve push notifications
    Opens WPiOS Settings.app Section */
@@ -3433,10 +3433,10 @@
 "It's been %@ since %@ was published. " = "Sudah %1$@ sejak %2$@ diterbitkan. ";
 
 /* Title of a notification displayed prompting the user to create a new blog post. The %@ will be replaced with the blog's title. */
-"It's time to blog on %@!" = "It's time to blog on %@!";
+"It's time to blog on %@!" = "Waktunya menulis pos pada %@!";
 
 /* Title of a notification displayed prompting the user to create a new blog post */
-"It's time to blog!" = "It's time to blog!";
+"It's time to blog!" = "Waktunya menulis pos!";
 
 /* Description of a Quick Start Tour */
 "It's time! Draft and publish your very first post." = "Sekarang waktunya! Buat konsep dan publikasikan pos pertama Anda.";
@@ -3717,7 +3717,7 @@
 "Loading stream..." = "Memuat stream...";
 
 /* Loading message shown while the Unsupported Block Editor is loading. */
-"Loading the block editor." = "Loading the block editor.";
+"Loading the block editor." = "Memuat editor blok.";
 
 /* Shown while the app waits for the username suggestions web service to return during the site creation process. */
 "Loading usernames" = "Memuat nama pengguna";
@@ -4394,7 +4394,7 @@
 "None" = "Tak ada";
 
 /* Title shown on table row where no blogging reminders have been set up yet */
-"None set" = "None set";
+"None set" = "Tidak diatur";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "North" = "Utara";
@@ -4461,7 +4461,7 @@
 "Notifications Unread" = "Pemberitahuan Tidak Terbaca";
 
 /* Title of button to navigate to the next screen of the blogging reminders flow, setting up push notifications. */
-"Notify me" = "Notify me";
+"Notify me" = "Beri tahu saya";
 
 /* First story intro item title */
 "Now stories are for everyone" = "Sekarang cerita tersedia untuk semua orang";
@@ -4819,10 +4819,10 @@
 "Please contact support for assistance." = "Silakan hubungi dukungan untuk mendapatkan bantuan.";
 
 /* Subtitle message shown when the Unsupported Block Editor fails to load. It asks users to verify that the block editor is enabled on their site before trying again. */
-"Please ensure the block editor is enabled on your site and try again." = "Please ensure the block editor is enabled on your site and try again.";
+"Please ensure the block editor is enabled on your site and try again." = "Pastikan editor blok diaktifkan di situs Anda, lalu coba lagi.";
 
 /* Message asking users to make sure that the block editor is enabled on their site in order for the Unsupported Block Editor to load properly. */
-"Please ensure the block editor is enabled on your site. If it is not enabled, it will not load." = "Please ensure the block editor is enabled on your site. If it is not enabled, it will not load.";
+"Please ensure the block editor is enabled on your site. If it is not enabled, it will not load." = "Pastikan editor blok di situs Anda sudah diaktifkan. Jika belum diaktifkan, editor blok tidak akan termuat.";
 
 /* Error message shown when a URL is invalid. */
 "Please enter a complete website address, like example.com." = "Masukkan alamat situs web lengkap, seperti contoh.com.";
@@ -5044,7 +5044,7 @@
 "Posting Activity" = "Aktivitas Posting";
 
 /* Informative tip shown to user in the Blogging Reminders Settings screen. */
-"Posting regularly can help keep your readers engaged, and attract new visitors to your site." = "Posting regularly can help keep your readers engaged, and attract new visitors to your site.";
+"Posting regularly can help keep your readers engaged, and attract new visitors to your site." = "Dengan rutin membuat pos, Anda bisa terus berinteraksi dengan para pembaca dan menarik pengunjung baru ke situs Anda.";
 
 /* All Time Stats 'Posts' label
    Noun. Title. Links to the blog's Posts screen.
@@ -5353,7 +5353,7 @@
 "Related Posts displays relevant content from your site below your posts" = "Pos Terkait menampilkan konten yang relevan dari situs Anda di bawah pos Anda";
 
 /* Title of the completion screen of the Blogging Reminders Settings screen when the reminders are removed. */
-"Reminders removed" = "Reminders removed";
+"Reminders removed" = "Pengingat dihapus";
 
 /* Add asset to media picker list
    Alert button to confirm a plugin to be removed
@@ -5945,7 +5945,7 @@
 "Set as Posts Page" = "Atur sebagai Halaman Pos";
 
 /* Title of the set goals button in the Blogging Reminders Settings flow. */
-"Set reminders" = "Set reminders";
+"Set reminders" = "Setel pengingat";
 
 /* The Jetpack view button title for the success state */
 "Set up" = "Siapkan";
@@ -5954,10 +5954,10 @@
 "Set up Jetpack" = "Siapkan Jetpack";
 
 /* Description on the first screen of the Blogging Reminders Settings flow called from site settings. */
-"Set up your blogging reminders on days you want to post." = "Set up your blogging reminders on days you want to post.";
+"Set up your blogging reminders on days you want to post." = "Siapkan pengingat blogging pada hari Anda ingin menerbitkan pos.";
 
 /* Title of the Blogging Reminders Settings screen. */
-"Set your blogging reminders" = "Set your blogging reminders";
+"Set your blogging reminders" = "Setel pengingat blogging Anda";
 
 /* Title of a Quick Start Tour */
 "Set your site title" = "Buat judul situs Anda";
@@ -6923,7 +6923,7 @@
 "This is where people will find you on the internet." = "Di sinilah orang akan menemukan Anda di internet.";
 
 /* The body of a notification displayed to the user prompting them to create a new blog post. The emoji should ideally remain, as part of the text. */
-"This is your reminder to blog today ✍️" = "";
+"This is your reminder to blog today ✍️" = "Ini pengingat blogging hari ini ✍️";
 
 /* Message displayed in Media Library if the user attempts to edit a media asset (image / video) after it has been deleted. */
 "This media item has been deleted." = "Item media ini sudah dihapus.";
@@ -7045,7 +7045,7 @@
 "To take photos or videos to use in your posts." = "Untuk mengambil foto atau video agar dapat digunakan di pos Anda.";
 
 /* Prompt telling users that they need to enable push notifications on their device to use the blogging reminders feature. */
-"To use blogging reminders, you'll need to turn on push notifications." = "To use blogging reminders, you'll need to turn on push notifications.";
+"To use blogging reminders, you'll need to turn on push notifications." = "Untuk menggunakan pengingat blogging, Anda harus mengaktfikan pemberitahuan push.";
 
 /* Message asking the user if they want to set up Jetpack from stats */
 "To use stats on your site, you'll need to install the Jetpack plugin." = "Untuk menggunakan statistik di situs, Anda perlu menginstal plugin Jetpack.";
@@ -7181,10 +7181,10 @@
 "Turn off site notifications" = "Nonaktifkan pemberitahuan situs";
 
 /* Title for a button which takes the user to the WordPress app's settings in the system Settings app. */
-"Turn on notifications" = "Turn on notifications";
+"Turn on notifications" = "Aktifkan pemberitahuan";
 
 /* Title of the screen in the Blogging Reminders flow which prompts users to enable push notifications. */
-"Turn on push notifications" = "Turn on push notifications";
+"Turn on push notifications" = "Aktifkan pemberitahuan push";
 
 /* Verb. An option to switch on site notifications. */
 "Turn on site notifications" = "Aktifkan pemberitahuan situs";
@@ -7271,7 +7271,7 @@
 "Unable to load posts right now." = "Tidak dapat memuat pos sekarang.";
 
 /* Title message shown when the Unsupported Block Editor fails to load. */
-"Unable to load the block editor right now." = "Unable to load the block editor right now.";
+"Unable to load the block editor right now." = "Tidak dapat memuat editor blok saat ini.";
 
 /* Text displayed in HUD if there was an error attempting to load a media image. */
 "Unable to load the image. Please choose a different one or try again later." = "Tidak dapat memuat gambar. Pilih yang lainnya atau coba lagi nanti.";
@@ -7372,7 +7372,7 @@
 "Unavailable" = "Tidak tersedia";
 
 /* When the App can't figure out what language a blog is configured to use. */
-"Undefined" = "Undefined";
+"Undefined" = "Tidak Terdefinisi";
 
 /* Accessibility label for underline button on formatting toolbar.
    Discoverability title for underline formatting keyboard shortcut. */
@@ -7393,7 +7393,7 @@
 "Unfollow %@" = "Batal Mengikuti %@";
 
 /* Verb. Button title. The user is following the comments on a post. */
-"Unfollow conversation by email" = "Unfollow conversation by email";
+"Unfollow conversation by email" = "Berhenti ikuti percakapan melalui email";
 
 /* Verb. An option to unfollow a site. */
 "Unfollow site" = "Berhenti mengikuti situs";
@@ -8342,7 +8342,7 @@
 "You have changes to %d posts that haven’t been uploaded to your site. Logging out now will delete those changes. Log out anyway?" = "Ada perubahan terhadap pos %d yang belum diunggah ke situs Anda. Perubahan tersebut akan dihapus jika Anda logout sekarang. Tetap logout?";
 
 /* Text shown to the user when setting up blogging reminders, if they complete the flow and have chosen not to add any reminders. */
-"You have no reminders set." = "You have no reminders set.";
+"You have no reminders set." = "Pengingat tidak disetel.";
 
 /* Show when clicking cancel on a comment text box and you didn't save your changes.
    Title of message with options that shown when there are unsaved changes and the author is trying to move away from the post. */
@@ -8392,10 +8392,10 @@
 "You will not be able to change your username back." = "Anda tidak akan dapat mengubah kembali nama pengguna Anda.";
 
 /* Blogging Reminders description confirming a user's choices. The placeholder will be replaced at runtime with a day of the week. The HTML markup is used to bold the word 'once'. */
-"You'll get a reminder to blog <strong>once<\/strong> a week on %@." = "You'll get a reminder to blog <strong>once<\/strong> a week on %@.";
+"You'll get a reminder to blog <strong>once<\/strong> a week on %@." = "Anda akan mendapat pengingat blogging <strong>satu kali<\/strong> seminggu pada %@.";
 
 /* Blogging Reminders description confirming a user's choices. The first placeholder will be populated with a count of the number of times a week they'll be reminded. The second will be a formatted list of days. For example: 'You'll get reminders to blog 2 times a week on Monday and Tuesday. */
-"You'll get reminders to blog %@ times a week on %@." = "You'll get reminders to blog %@ times a week on %@.";
+"You'll get reminders to blog %@ times a week on %@." = "Anda akan mendapat pengingat blogging %1$@ kali seminggu pada %2$@.";
 
 /* Displayed in the Notifications Tab as a title, when the Unread Filter shows no unread notifications as a title */
 "You're all up to date!" = "Semua sudah diperbarui!";
@@ -8449,7 +8449,7 @@
 "Your post is currently being uploaded. Please wait until this completes." = "Pos Anda sedang diunggah. Harap tunggu hingga selesai.";
 
 /* Description on the first screen of the Blogging Reminders Settings flow called aftet post publishing. */
-"Your post is publishing... in the meantime, set up your blogging reminders on days you want to post." = "Your post is publishing... in the meantime, set up your blogging reminders on days you want to post.";
+"Your post is publishing... in the meantime, set up your blogging reminders on days you want to post." = "Pos Anda sedang diterbitkan... Sementara itu, siapkan pengingat blogging pada hari Anda ingin menerbitkan pos.";
 
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "Pos, laman, dan pengaturan Anda akan dikirim melalui alamat email %@.";
