--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-06-23 09:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-09 09:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -298,13 +298,13 @@
 "< 1 hour" = "< 1 ora";
 
 /* A short description of how many times a week the user will receive a blogging reminder. The '%d' placeholder will be populated with a count of the number of times a week they'll be reminded, and should be surrounded by <strong> HTML tags. */
-"<strong>%d<\/strong> times a week" = "<strong>%d<\/strong> times a week";
+"<strong>%d<\/strong> times a week" = "<strong>%d<\/strong> volte a settimana";
 
 /* Short title telling the user they will receive a blogging reminder once per week. The word for 'once' should be surrounded by <strong> HTML tags. */
-"<strong>Once<\/strong> a week" = "<strong>Once<\/strong> a week";
+"<strong>Once<\/strong> a week" = "<strong>Una volta<\/strong> alla settimana ";
 
 /* Short title telling the user they will receive a blogging reminder two times a week. The word for 'twice' should be surrounded by <strong> HTML tags. */
-"<strong>Twice<\/strong> a week" = "<strong>Twice<\/strong> a week";
+"<strong>Twice<\/strong> a week" = "<strong>Due volte<\/strong> alla settimana";
 
 /* Label displaying the user's username preceeded by an '@' symbol. %1$@ is a placeholder for the username. */
 "@%1$@" = "@%1$@";
@@ -649,7 +649,7 @@
 "Alt Text" = "Testo Alt (alternativo)";
 
 /* No comment provided by engineer. */
-"Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\"." = "Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\".";
+"Alternatively, you can detach and edit these blocks separately by tapping \"Convert to regular blocks\"." = "In alternativa, puoi staccare e modificare questi blocchi separatamente toccando \"Converti in blocchi regolari\".";
 
 /* String displayed before offering alternative login methods */
 "Alternatively:" = "In alternativa:";
@@ -1029,7 +1029,7 @@
 "Blog's Viewer" = "Visitatore del blog";
 
 /* Label for the blogging reminders setting */
-"Blogging Reminders" = "Blogging Reminders";
+"Blogging Reminders" = "Promemoria relativi al blog";
 
 /* Accessibility label for bold button on formatting toolbar.
    Discoverability title for bold formatting keyboard shortcut. */
@@ -2410,10 +2410,10 @@
 "Edit your homepage" = "Modifica la tua homepage";
 
 /* No comment provided by engineer. */
-"Editing reusable blocks is not yet supported on WordPress for Android" = "Editing reusable blocks is not yet supported on WordPress for Android";
+"Editing reusable blocks is not yet supported on WordPress for Android" = "La modifica dei blocchi riutilizzabili non è ancora supportata su WordPress per Android";
 
 /* No comment provided by engineer. */
-"Editing reusable blocks is not yet supported on WordPress for iOS" = "Editing reusable blocks is not yet supported on WordPress for iOS";
+"Editing reusable blocks is not yet supported on WordPress for iOS" = "La modifica dei blocchi riutilizzabili non è ancora supportata su WordPress per iOS";
 
 /* Editing GIF alert message. */
 "Editing this GIF will remove its animation." = "La modifica di questa GIF rimuoverà la sua animazione.";
@@ -2647,7 +2647,7 @@
 "Event" = "Evento";
 
 /* Short title telling the user they will receive a blogging reminder every day of the week. */
-"Every day" = "Every day";
+"Every day" = "Ogni giorno";
 
 /* Label for the post author filter. This filter shows posts for all users on the blog. */
 "Everyone" = "Tutti";
@@ -3029,7 +3029,7 @@
 "Go to Reader" = "Vai al Reader";
 
 /* Instruction telling the user how to enable notifications in their device's system Settings app. The section names here should match those in Settings. */
-"Go to Settings → Notifications → WordPress, and toggle Allow Notifications." = "Go to Settings → Notifications → WordPress, and toggle Allow Notifications.";
+"Go to Settings → Notifications → WordPress, and toggle Allow Notifications." = "Vai a Impostazioni &rarr; Notifiche &rarr; WordPress e attiva Consenti notifiche.";
 
 /* Button label for going to settings to approve push notifications
    Opens WPiOS Settings.app Section */
@@ -3433,10 +3433,10 @@
 "It's been %@ since %@ was published. " = "Sono passati %1$@ dalla pubblicazione di %2$@. ";
 
 /* Title of a notification displayed prompting the user to create a new blog post. The %@ will be replaced with the blog's title. */
-"It's time to blog on %@!" = "It's time to blog on %@!";
+"It's time to blog on %@!" = "È ora di pubblicare sul blog di %@!";
 
 /* Title of a notification displayed prompting the user to create a new blog post */
-"It's time to blog!" = "It's time to blog!";
+"It's time to blog!" = "È ora di pubblicare sul blog!";
 
 /* Description of a Quick Start Tour */
 "It's time! Draft and publish your very first post." = "È ora! Fai una bozza e pubblica ogni nuovo articolo.";
@@ -3717,7 +3717,7 @@
 "Loading stream..." = "Caricamento stream in corso...";
 
 /* Loading message shown while the Unsupported Block Editor is loading. */
-"Loading the block editor." = "Loading the block editor.";
+"Loading the block editor." = "Caricamento dell'editor a blocchi in corso...";
 
 /* Shown while the app waits for the username suggestions web service to return during the site creation process. */
 "Loading usernames" = "Caricamento dei nomi utente";
@@ -4394,7 +4394,7 @@
 "None" = "Nessuno";
 
 /* Title shown on table row where no blogging reminders have been set up yet */
-"None set" = "None set";
+"None set" = "Nessun set";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "North" = "Nord";
@@ -4461,7 +4461,7 @@
 "Notifications Unread" = "Notifiche non lette";
 
 /* Title of button to navigate to the next screen of the blogging reminders flow, setting up push notifications. */
-"Notify me" = "Notify me";
+"Notify me" = "Inviami una notifica";
 
 /* First story intro item title */
 "Now stories are for everyone" = "Le storie ora sono per tutti";
@@ -4819,10 +4819,10 @@
 "Please contact support for assistance." = "Contatta il supporto per l’assistenza.";
 
 /* Subtitle message shown when the Unsupported Block Editor fails to load. It asks users to verify that the block editor is enabled on their site before trying again. */
-"Please ensure the block editor is enabled on your site and try again." = "Please ensure the block editor is enabled on your site and try again.";
+"Please ensure the block editor is enabled on your site and try again." = "Controlla che l'editor a blocchi sia attivato sul tuo sito e riprova.";
 
 /* Message asking users to make sure that the block editor is enabled on their site in order for the Unsupported Block Editor to load properly. */
-"Please ensure the block editor is enabled on your site. If it is not enabled, it will not load." = "Please ensure the block editor is enabled on your site. If it is not enabled, it will not load.";
+"Please ensure the block editor is enabled on your site. If it is not enabled, it will not load." = "Controlla che l'editor a blocchi sia attivato sul tuo sito. Se non è attivato, non sarà possibile procedere al caricamento.";
 
 /* Error message shown when a URL is invalid. */
 "Please enter a complete website address, like example.com." = "Inserisci un indirizzo di sito web completo, come esempio.com.";
@@ -5044,7 +5044,7 @@
 "Posting Activity" = "Attività di pubblicazione";
 
 /* Informative tip shown to user in the Blogging Reminders Settings screen. */
-"Posting regularly can help keep your readers engaged, and attract new visitors to your site." = "Posting regularly can help keep your readers engaged, and attract new visitors to your site.";
+"Posting regularly can help keep your readers engaged, and attract new visitors to your site." = "Pubblicare articoli regolarmente può contribuire a mantenere l'attenzione dei lettori e attrarre nuovi visitatori sul tuo sito.";
 
 /* All Time Stats 'Posts' label
    Noun. Title. Links to the blog's Posts screen.
@@ -5353,7 +5353,7 @@
 "Related Posts displays relevant content from your site below your posts" = "Articoli correlati visualizza contenuti pertinenti del tuo sito sotto i tuoi articoli";
 
 /* Title of the completion screen of the Blogging Reminders Settings screen when the reminders are removed. */
-"Reminders removed" = "Reminders removed";
+"Reminders removed" = "Promemoria eliminati";
 
 /* Add asset to media picker list
    Alert button to confirm a plugin to be removed
@@ -5945,7 +5945,7 @@
 "Set as Posts Page" = "Imposta come pagina degli articoli";
 
 /* Title of the set goals button in the Blogging Reminders Settings flow. */
-"Set reminders" = "Set reminders";
+"Set reminders" = "Imposta promemoria";
 
 /* The Jetpack view button title for the success state */
 "Set up" = "Configura";
@@ -5954,10 +5954,10 @@
 "Set up Jetpack" = "Configura Jetpack";
 
 /* Description on the first screen of the Blogging Reminders Settings flow called from site settings. */
-"Set up your blogging reminders on days you want to post." = "Set up your blogging reminders on days you want to post.";
+"Set up your blogging reminders on days you want to post." = "Imposta i promemoria relativi al blog per i giorni in cui desideri pubblicare.";
 
 /* Title of the Blogging Reminders Settings screen. */
-"Set your blogging reminders" = "Set your blogging reminders";
+"Set your blogging reminders" = "Imposta i promemoria relativi al blog";
 
 /* Title of a Quick Start Tour */
 "Set your site title" = "Imposta il titolo del sito";
@@ -6923,7 +6923,7 @@
 "This is where people will find you on the internet." = "Ecco dove gli utenti ti troveranno su Internet.";
 
 /* The body of a notification displayed to the user prompting them to create a new blog post. The emoji should ideally remain, as part of the text. */
-"This is your reminder to blog today ✍️" = "";
+"This is your reminder to blog today ✍️" = "Ricordati di pubblicare sul blog oggi ✍️";
 
 /* Message displayed in Media Library if the user attempts to edit a media asset (image / video) after it has been deleted. */
 "This media item has been deleted." = "Questo elemento multimediale è stato eliminato.";
@@ -7045,7 +7045,7 @@
 "To take photos or videos to use in your posts." = "Per acquisire foto o video da usare nei tuoi articoli.";
 
 /* Prompt telling users that they need to enable push notifications on their device to use the blogging reminders feature. */
-"To use blogging reminders, you'll need to turn on push notifications." = "To use blogging reminders, you'll need to turn on push notifications.";
+"To use blogging reminders, you'll need to turn on push notifications." = "Per utilizzare i promemoria relativi al blog, devi attivare le notifiche push.";
 
 /* Message asking the user if they want to set up Jetpack from stats */
 "To use stats on your site, you'll need to install the Jetpack plugin." = "Per utilizzare le statistiche sul tuo sito, sarà necessario installare il plugin di Jetpack.";
@@ -7181,10 +7181,10 @@
 "Turn off site notifications" = "Disattiva notifiche sito";
 
 /* Title for a button which takes the user to the WordPress app's settings in the system Settings app. */
-"Turn on notifications" = "Turn on notifications";
+"Turn on notifications" = "Attiva notifiche";
 
 /* Title of the screen in the Blogging Reminders flow which prompts users to enable push notifications. */
-"Turn on push notifications" = "Turn on push notifications";
+"Turn on push notifications" = "Disattiva notifiche push";
 
 /* Verb. An option to switch on site notifications. */
 "Turn on site notifications" = "Attiva notifiche sito";
@@ -7271,7 +7271,7 @@
 "Unable to load posts right now." = "Al momento non è possibile caricare articoli.";
 
 /* Title message shown when the Unsupported Block Editor fails to load. */
-"Unable to load the block editor right now." = "Unable to load the block editor right now.";
+"Unable to load the block editor right now." = "Impossibile caricare l'editor a blocchi in questo momento.";
 
 /* Text displayed in HUD if there was an error attempting to load a media image. */
 "Unable to load the image. Please choose a different one or try again later." = "Impossibile caricare l'immagine. Selezionarne una diversa o riprovare più tardi.";
@@ -7372,7 +7372,7 @@
 "Unavailable" = "Non disponibile";
 
 /* When the App can't figure out what language a blog is configured to use. */
-"Undefined" = "Undefined";
+"Undefined" = "Non definito";
 
 /* Accessibility label for underline button on formatting toolbar.
    Discoverability title for underline formatting keyboard shortcut. */
@@ -7393,7 +7393,7 @@
 "Unfollow %@" = "Smetti di seguire %@";
 
 /* Verb. Button title. The user is following the comments on a post. */
-"Unfollow conversation by email" = "Unfollow conversation by email";
+"Unfollow conversation by email" = "Smetti di seguire la conversazione tramite e-mail";
 
 /* Verb. An option to unfollow a site. */
 "Unfollow site" = "Smetti di seguire il sito";
@@ -8342,7 +8342,7 @@
 "You have changes to %d posts that haven’t been uploaded to your site. Logging out now will delete those changes. Log out anyway?" = "Hai modifiche per %d articoli che non sono stati caricati sul sito. Tali modifiche verranno ora eliminate una volta disconnesso. Desideri comunque disconnetterti?";
 
 /* Text shown to the user when setting up blogging reminders, if they complete the flow and have chosen not to add any reminders. */
-"You have no reminders set." = "You have no reminders set.";
+"You have no reminders set." = "Non ci sono promemoria impostati.";
 
 /* Show when clicking cancel on a comment text box and you didn't save your changes.
    Title of message with options that shown when there are unsaved changes and the author is trying to move away from the post. */
@@ -8392,10 +8392,10 @@
 "You will not be able to change your username back." = "la modifica del nome utente non è reversibile.";
 
 /* Blogging Reminders description confirming a user's choices. The placeholder will be replaced at runtime with a day of the week. The HTML markup is used to bold the word 'once'. */
-"You'll get a reminder to blog <strong>once<\/strong> a week on %@." = "You'll get a reminder to blog <strong>once<\/strong> a week on %@.";
+"You'll get a reminder to blog <strong>once<\/strong> a week on %@." = "Riceverai promemoria relativi al blog <strong>una volta<\/strong> alla settimana di %@.";
 
 /* Blogging Reminders description confirming a user's choices. The first placeholder will be populated with a count of the number of times a week they'll be reminded. The second will be a formatted list of days. For example: 'You'll get reminders to blog 2 times a week on Monday and Tuesday. */
-"You'll get reminders to blog %@ times a week on %@." = "You'll get reminders to blog %@ times a week on %@.";
+"You'll get reminders to blog %@ times a week on %@." = "Riceverai promemoria relativi al blog %1$@ volte alla settimana di %2$@.";
 
 /* Displayed in the Notifications Tab as a title, when the Unread Filter shows no unread notifications as a title */
 "You're all up to date!" = "È tutto aggiornato!";
@@ -8449,7 +8449,7 @@
 "Your post is currently being uploaded. Please wait until this completes." = "L'articolo è attualmente in fase di caricamento. Attendi il termine dell'operazione.";
 
 /* Description on the first screen of the Blogging Reminders Settings flow called aftet post publishing. */
-"Your post is publishing... in the meantime, set up your blogging reminders on days you want to post." = "Your post is publishing... in the meantime, set up your blogging reminders on days you want to post.";
+"Your post is publishing... in the meantime, set up your blogging reminders on days you want to post." = "Pubblicazione dell'articolo in corso... Nel frattempo, puoi impostare promemoria relativi al blog per i giorni in cui desideri pubblicare.";
 
 /* Message of Export Content confirmation alert; substitution is user's email address */
 "Your posts, pages, and settings will be mailed to you at %@." = "I tuoi articoli, pagine e impostazioni ti saranno inviati via email a %@.";
